[package]
name = "dht-get-peers"
version = "0.1.0"
edition = "2021"
description = "Request a peers from Bittorent DHT network"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lava_torrent = "0.9"
thiserror = "1.0"
log = "0.4.17"

[dev-dependencies]
env_logger = "0.9"
